--- a/index.html
+++ b/index.html
@@ -6342,12 +6342,12 @@
         }
     </style>
     <title>Home | BE LIKE BILL</title>
-    <link rel="canonical" href="https://www.belikebilleth.com" />
+    <link rel="canonical" href="" />
     <meta property="og:title" content="BE LIKE BILL" />
     <meta property="og:image" content="https://static.wixstatic.com/media/7f442f_04796e2e0458420f85489b8166fd7888~mv2.png/v1/fill/w_2500,h_1406,al_c/7f442f_04796e2e0458420f85489b8166fd7888~mv2.png" />
     <meta property="og:image:width" content="2500" />
     <meta property="og:image:height" content="1406" />
-    <meta property="og:url" content="https://www.belikebilleth.com" />
+    <meta property="og:url" content="" />
     <meta property="og:site_name" content="BE LIKE BILL" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -18432,25 +18432,25 @@
                                                             aria-label="Site">
                                                             <ul class="StylableHorizontalMenu3372578893__menu">
                                                                 <li class="itemDepth02233374943__itemWrapper wixui-horizontal-menu__item" data-testid="menuItemDepth0" data-item-depth="0" data-is-current="true" aria-current="true">
-                                                                    <a data-testid="linkElement" href="https://www.belikebilleth.com" target="_self" class="itemDepth02233374943__root itemDepth02233374943--isCurrentPage StylableHorizontalMenu3372578893__menuItem has-custom-focus"
+                                                                    <a data-testid="linkElement" href="" target="_self" class="itemDepth02233374943__root itemDepth02233374943--isCurrentPage StylableHorizontalMenu3372578893__menuItem has-custom-focus"
                                                                         tabindex="0">
                                                                         <div class="itemDepth02233374943__container"><span class="itemDepth02233374943__label wixui-horizontal-menu__item-label">Home</span></div>
                                                                     </a>
                                                                 </li>
                                                                 <li class="itemDepth02233374943__itemWrapper wixui-horizontal-menu__item" data-testid="menuItemDepth0" data-item-depth="0" data-is-current="false" aria-current="false">
-                                                                    <a data-testid="linkElement" data-anchor="anchors-locqdfvq" href="https://www.belikebilleth.com" target="_self" class="itemDepth02233374943__root StylableHorizontalMenu3372578893__menuItem has-custom-focus"
+                                                                    <a data-testid="linkElement" data-anchor="anchors-locqdfvq" href="" target="_self" class="itemDepth02233374943__root StylableHorizontalMenu3372578893__menuItem has-custom-focus"
                                                                         tabindex="0">
                                                                         <div class="itemDepth02233374943__container"><span class="itemDepth02233374943__label wixui-horizontal-menu__item-label">About</span></div>
                                                                     </a>
                                                                 </li>
                                                                 <li class="itemDepth02233374943__itemWrapper wixui-horizontal-menu__item" data-testid="menuItemDepth0" data-item-depth="0" data-is-current="false" aria-current="false">
-                                                                    <a data-testid="linkElement" data-anchor="anchors-locqd3gn" href="https://www.belikebilleth.com" target="_self" class="itemDepth02233374943__root StylableHorizontalMenu3372578893__menuItem has-custom-focus"
+                                                                    <a data-testid="linkElement" data-anchor="anchors-locqd3gn" href="" target="_self" class="itemDepth02233374943__root StylableHorizontalMenu3372578893__menuItem has-custom-focus"
                                                                         tabindex="0">
                                                                         <div class="itemDepth02233374943__container"><span class="itemDepth02233374943__label wixui-horizontal-menu__item-label">Platform</span></div>
                                                                     </a>
                                                                 </li>
                                                                 <li class="itemDepth02233374943__itemWrapper wixui-horizontal-menu__item" data-testid="menuItemDepth0" data-item-depth="0" data-is-current="false" aria-current="false">
-                                                                    <a data-testid="linkElement" data-anchor="anchors-locqdm3i" href="https://www.belikebilleth.com" target="_self" class="itemDepth02233374943__root StylableHorizontalMenu3372578893__menuItem has-custom-focus"
+                                                                    <a data-testid="linkElement" data-anchor="anchors-locqdm3i" href="" target="_self" class="itemDepth02233374943__root StylableHorizontalMenu3372578893__menuItem has-custom-focus"
                                                                         tabindex="0">
                                                                         <div class="itemDepth02233374943__container"><span class="itemDepth02233374943__label wixui-horizontal-menu__item-label">Tokenomics</span></div>
                                                                     </a>
@@ -18468,7 +18468,7 @@
 </svg>
 </div></span></div></button></div>
                                                         <div id="comp-kbgakxea_r_comp-locqjmsk" class="comp-kbgakxea_r_comp-locqjmsk" data-semantic-classname="button">
-                                                            <a data-testid="linkElement" href="https://mobile.x.com/BeLikeBill_Erc" target="_blank" rel="noreferrer noopener" class="StylableButton2545352419__root comp-kbgakxea_r_comp-locqjmsk-styleId__root wixui-button StylableButton2545352419__link"
+                                                            <a data-testid="linkElement" href="https://mobile.x.com/" target="_blank" rel="noreferrer noopener" class="StylableButton2545352419__root comp-kbgakxea_r_comp-locqjmsk-styleId__root wixui-button StylableButton2545352419__link"
                                                                 aria-label="Go">
                                                                 <div class="StylableButton2545352419__container"><span class="StylableButton2545352419__label wixui-button__label" data-testid="stylablebutton-label">Go</span><span class="StylableButton2545352419__icon wixui-button__icon" aria-hidden="true"
                                                                         data-testid="stylablebutton-icon"><div><?xml version="1.0" encoding="UTF-8"?>
@@ -18880,9 +18880,9 @@ works for his bag</span></p>
                                                 <div id="comp-locqyskt" class="QOX0dS JCRlLH comp-locqyskt-container comp-locqyskt wixui-box">
                                                     <div class="AG_P7Z MAs5Tr wixui-box" style="display: flex;"></div>
                                                     <div id="comp-locqxl4r" class="BaOVQ8 tz5f0K comp-locqxl4r wixui-rich-text" data-testid="richTextElement">
-                                                        <h4 class="font_4 wixui-rich-text__text"><span class="wixui-rich-text__text">0xA6E3d207B065Bea0f614383388282</span></h4>
+                                                        <h4 class="font_4 wixui-rich-text__text"><span class="wixui-rich-text__text">TBA</span></h4>
 
-                                                        <h4 class="font_4 wixui-rich-text__text"><span class="wixui-rich-text__text">71ceCa478c8</span></h4>
+                                                        <h4 class="font_4 wixui-rich-text__text"><span class="wixui-rich-text__text"></span></h4>
                                                     </div>
                                                     <div id="comp-locqx7ff" class="BaOVQ8 tz5f0K comp-locqx7ff wixui-rich-text" data-testid="richTextElement">
                                                         <h4 class="font_4 wixui-rich-text__text"><span class="wixui-rich-text__text">CONTRACT ADDRESS:</span></h4>
@@ -18891,7 +18891,7 @@ works for his bag</span></p>
                                                         <h4 class="font_4 wixui-rich-text__text"><span class="wixui-rich-text__text">1 MILLION $BILL SUPPLY</span></h4>
                                                     </div>
                                                     <div id="comp-locqx274" class="BaOVQ8 tz5f0K comp-locqx274 wixui-rich-text" data-testid="richTextElement">
-                                                        <h4 class="font_4 wixui-rich-text__text"><span class="wixui-rich-text__text">1% BUY/SELL</span></h4>
+                                                        <h4 class="font_4 wixui-rich-text__text"><span class="wixui-rich-text__text">0% BUY/SELL</span></h4>
                                                     </div>
                                                 </div>
                                                 <div id="comp-locqz071" data-testid="imageX" class="z4Uj6S comp-locqz071 wixui-image">
@@ -19370,7 +19370,7 @@ Conduct a meme-themed airdrop to reward early supporters.</span></p>
                                                     <div id="comp-kbgakxmn_r_comp-locrwph0" class="QOX0dS JCRlLH comp-kbgakxmn_r_comp-locrwph0-container comp-kbgakxmn_r_comp-locrwph0 wixui-box">
                                                         <div class="AG_P7Z MAs5Tr wixui-box" style="display: flex;"></div>
                                                         <div id="comp-kbgakxmn_r_comp-locrwph3" class="comp-kbgakxmn_r_comp-locrwph3" data-semantic-classname="button">
-                                                            <a data-testid="linkElement" href="https://t.me/BeLikeBill_ETH" target="_blank" rel="noreferrer noopener" class="StylableButton2545352419__root comp-kbgakxmn_r_comp-locrwph3-styleId__root wixui-button StylableButton2545352419__link"
+                                                            <a data-testid="linkElement" href="https://t.me/" target="_blank" rel="noreferrer noopener" class="StylableButton2545352419__root comp-kbgakxmn_r_comp-locrwph3-styleId__root wixui-button StylableButton2545352419__link"
                                                                 aria-label="Go">
                                                                 <div class="StylableButton2545352419__container"><span class="StylableButton2545352419__label wixui-button__label" data-testid="stylablebutton-label">Go</span><span class="StylableButton2545352419__icon wixui-button__icon" aria-hidden="true"
                                                                         data-testid="stylablebutton-icon"><div><?xml version="1.0" encoding="UTF-8"?>
@@ -19383,7 +19383,7 @@ Conduct a meme-themed airdrop to reward early supporters.</span></p>
                                                             </a>
                                                         </div>
                                                         <div id="comp-kbgakxmn_r_comp-locrwph7" class="comp-kbgakxmn_r_comp-locrwph7" data-semantic-classname="button">
-                                                            <a data-testid="linkElement" href="https://mobile.x.com/BeLikeBill_Erc" target="_blank" rel="noreferrer noopener" class="StylableButton2545352419__root comp-kbgakxmn_r_comp-locrwph7-styleId__root wixui-button StylableButton2545352419__link"
+                                                            <a data-testid="linkElement" href="https://mobile.x.com/" target="_blank" rel="noreferrer noopener" class="StylableButton2545352419__root comp-kbgakxmn_r_comp-locrwph7-styleId__root wixui-button StylableButton2545352419__link"
                                                                 aria-label="Go">
                                                                 <div class="StylableButton2545352419__container"><span class="StylableButton2545352419__label wixui-button__label" data-testid="stylablebutton-label">Go</span><span class="StylableButton2545352419__icon wixui-button__icon" aria-hidden="true"
                                                                         data-testid="stylablebutton-icon"><div><?xml version="1.0" encoding="UTF-8"?>
@@ -19421,16 +19421,16 @@ Conduct a meme-themed airdrop to reward early supporters.</span></p>
                                                                     <nav id="comp-kd5px9q0_r_comp-kd5px9kk" aria-label="Site" class="ygWbWW comp-kd5px9q0_r_comp-kd5px9kk wixui-vertical-menu">
                                                                         <ul class="DtkLku">
                                                                             <li data-testid="comp-kd5px9q0_r_comp-kd5px9kk-0" aria-current="page" class="DXlHRo U5UMrS wixui-vertical-menu__item XBLIbP">
-                                                                                <div data-testid="itemWrapper" class="P_UEhm"><span data-testid="linkWrapper" class="zY9Gw4"><a data-testid="linkElement" href="https://www.belikebilleth.com" target="_self" class="Y3Mib0">Home</a></span></div>
+                                                                                <div data-testid="itemWrapper" class="P_UEhm"><span data-testid="linkWrapper" class="zY9Gw4"><a data-testid="linkElement" href="" target="_self" class="Y3Mib0">Home</a></span></div>
                                                                             </li>
                                                                             <li data-testid="comp-kd5px9q0_r_comp-kd5px9kk-1" class="DXlHRo U5UMrS wixui-vertical-menu__item">
-                                                                                <div data-testid="itemWrapper" class="P_UEhm"><span data-testid="linkWrapper" class="zY9Gw4"><a data-testid="linkElement" data-anchor="anchors-locqdfvq" href="https://www.belikebilleth.com" target="_self" class="Y3Mib0">About</a></span></div>
+                                                                                <div data-testid="itemWrapper" class="P_UEhm"><span data-testid="linkWrapper" class="zY9Gw4"><a data-testid="linkElement" data-anchor="anchors-locqdfvq" href="" target="_self" class="Y3Mib0">About</a></span></div>
                                                                             </li>
                                                                             <li data-testid="comp-kd5px9q0_r_comp-kd5px9kk-2" class="DXlHRo U5UMrS wixui-vertical-menu__item">
-                                                                                <div data-testid="itemWrapper" class="P_UEhm"><span data-testid="linkWrapper" class="zY9Gw4"><a data-testid="linkElement" data-anchor="anchors-locqd3gn" href="https://www.belikebilleth.com" target="_self" class="Y3Mib0">Platform</a></span></div>
+                                                                                <div data-testid="itemWrapper" class="P_UEhm"><span data-testid="linkWrapper" class="zY9Gw4"><a data-testid="linkElement" data-anchor="anchors-locqd3gn" href="" target="_self" class="Y3Mib0">Platform</a></span></div>
                                                                             </li>
                                                                             <li data-testid="comp-kd5px9q0_r_comp-kd5px9kk-3" class="DXlHRo U5UMrS wixui-vertical-menu__item">
-                                                                                <div data-testid="itemWrapper" class="P_UEhm"><span data-testid="linkWrapper" class="zY9Gw4"><a data-testid="linkElement" data-anchor="anchors-locqdm3i" href="https://www.belikebilleth.com" target="_self" class="Y3Mib0">Tokenomics</a></span></div>
+                                                                                <div data-testid="itemWrapper" class="P_UEhm"><span data-testid="linkWrapper" class="zY9Gw4"><a data-testid="linkElement" data-anchor="anchors-locqdm3i" href="" target="_self" class="Y3Mib0">Tokenomics</a></span></div>
                                                                             </li>
                                                                         </ul>
                                                                     </nav><button id="comp-kd5px9q0_r_comp-kkmqi5tc" class="comp-kd5px9q0_r_comp-kkmqi5tc wixui-vector-image"><div data-testid="svgRoot-comp-kd5px9q0_r_comp-kkmqi5tc" class="aizuI7 TcoJIb WQ4fSJ comp-kd5px9q0_r_comp-kkmqi5tc"><?xml version="1.0" encoding="UTF-8"?>
