--- a/index.html
+++ b/index.html
@@ -19151,10 +19151,10 @@ works for his bag</span></p>
                                                 <div id="comp-lohgpxms" class="QOX0dS JCRlLH comp-lohgpxms-container comp-lohgpxms wixui-box">
                                                     <div class="AG_P7Z MAs5Tr wixui-box" style="display: flex;"></div>
                                                     <div id="comp-lohgocia" class="BaOVQ8 tz5f0K comp-lohgocia wixui-rich-text" data-testid="richTextElement">
-                                                        <h4 class="font_4 wixui-rich-text__text"><span style="text-decoration:underline;" class="wixui-rich-text__text"><a href="https://app.uncx.network/amm/uni-v2/pair/0x8a29b1532f0eb25267fc0185c4b23ba219b5adb6" target="_blank" rel="noreferrer noopener" class="wixui-rich-text__text">LP LOCK</a></span></h4>
+                                                        <h4 class="font_4 wixui-rich-text__text"><span style="text-decoration:underline;" class="wixui-rich-text__text"><a href="" target="_blank" rel="noreferrer noopener" class="wixui-rich-text__text">LP LOCK</a></span></h4>
                                                     </div>
                                                     <div id="comp-lohgp71l" class="BaOVQ8 tz5f0K comp-lohgp71l wixui-rich-text" data-testid="richTextElement">
-                                                        <h4 class="font_4 wixui-rich-text__text"><span style="text-decoration:underline;" class="wixui-rich-text__text"><a href="https://www.dextools.io/app/ether/pair-explorer/0x8a29b1532f0eb25267fc0185c4b23ba219b5adb6" target="_blank" rel="noreferrer noopener" class="wixui-rich-text__text">CHART</a></span></h4>
+                                                        <h4 class="font_4 wixui-rich-text__text"><span style="text-decoration:underline;" class="wixui-rich-text__text"><a href="" target="_blank" rel="noreferrer noopener" class="wixui-rich-text__text">CHART</a></span></h4>
                                                     </div>
                                                 </div>
                                             </section>
